--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Deploy to Firebase Hosting
         run: |
-          npm install -g firebase-tools
+          npm install -g firebase-tools --registry=https://registry.npmjs.org/
           firebase deploy --only hosting --token ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
