--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -2,30 +2,26 @@ name: Firebase Deploy
 
 on:
   push:
-    branches: [main]  # Change to your deploy branch if needed
+    branches: [main]  # Change if needed
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: Install dependencies
+      - name: Install dependencies (with public registry)
         run: npm install --registry=https://registry.npmjs.org/
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
+      - name: Build project (skip CI warnings)
         run: CI='' npm run build
 
-      - name: Deploy to Firebase Hosting
-        run: |
-          npm install -g firebase-tools --registry=https://registry.npmjs.org/
-          firebase deploy --only hosting --token ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
+      - name: Deploy to Firebase Hosting using npx
+        run: npx --yes firebase-tools@latest deploy --only hosting --token ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
